prevent possible NPE when retrieving message headers